# ROLLER-installer

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  CONTRIBUTING.md  INSTALLER_PHASE_1.md  INSTALLER_PLAN.md  README.md  main.py  mise.toml  pyproject.toml
.github/workflows/: build-installer.yml  integration-test.yml  release.yml  test-installer.yml
.mise-tasks/: build.py
assets/: .gitkeep
assets/templates/: .gitkeep  FATAL.INI  config.ini
roller_installer/: __init__.py  __main__.py
roller_installer/cli/: commands.py
roller_installer/core/: __init__.py  asset_extractor.py  github_client.py  ubi_downloader.py
roller_installer/core/handlers/: __init__.py  cue_bin_handler.py  iso_handler.py  zip_handler.py
roller_installer/gui/: __init__.py
roller_installer/tui/: __init__.py
roller_installer/utils/: bchunk_resolver.py  binary_resolver.py  icons.py  platform_utils.py  ubi_resolver.py
scripts/: .gitkeep  build-analyze.py  build-verbose.py  build.py  icons.py
tests/: __init__.py
